--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,8 @@ name: modifiers
 channels:
   - conda-forge
 dependencies:
+  - conda-forge::beautifulsoup4=4.8.1
+  - conda-forge::gensim=3.8.1
   - conda-forge::ipykernel=5.1.3
   - conda-forge::ipywidgets=7.5.1
   - conda-forge::nb_conda_kernels=2.2.2
