--- a/environment.yml
+++ b/environment.yml
@@ -15,4 +15,5 @@ dependencies:
   - conda-forge::requests=2.22.0
   - conda-forge::scikit-learn=0.21.3
   - conda-forge::scipy=1.3.1
+  - conda-forge::setuptools=42.0.2
   - conda-forge::tqdm=4.36.1
